# NF_Tx_Core

./: BaseTransaction.cpp  BaseTransaction.h  BinaryUtil.h  CMakeLists.txt  DataHolder.h  FileLog.h  README.md  Structs.h  TransactionManager.cpp  TransactionManager.h  TransactionParser.cpp  TransactionParser.h  Util.h  Wallet.cpp  Wallet.h  WalletBalance.h  library.cpp  library.h
Price/: AssetValue.cpp  AssetValue.h  Cache.cpp  Cache.h  PriceCache.cpp  PriceCache.h  StaticPrices.h
Transaction/: BaseTransaction.cpp  BaseTransaction.h  TransactionStruct.h
TransactionManager/: TMState.h
Util/: CharUtil.cpp  CharUtil.h  Util.cpp  Util.h
Wallet/: Wallet.cpp  Wallet.h  WalletStruct.h
